# Optimize-GEMM

./: .gitignore  CMakeLists.txt  README.md
gemm/: compare_matrices.cpp  optimize_gemm_v0.cpp  random_matrix.cpp  reference_gemm.cpp  timer.cpp
include/gemm/: gemm_impls.h  utils.h
test/: CMakeLists.txt  main.cpp  plot.py
